@@ -8,7 +8,20 @@ dependencies {
     implementation project(':clock')
     compileOnly libs.autoservice
     annotationProcessor libs.autoservice.compiler
+
+    testImplementation libs.assertj
+    testImplementation platform(libs.junit.bom)
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly libs.junit.platform.launcher
 }
+
+test {
+    useJUnitPlatform()
+}
+
+// TODO(deephaven-core#6345): Improve build process for jars that depend on JVM internals
+// In the meantime, we can be relatively confident this JAR works for the multiple versions of java since we do nightly
+// tests with a range of testRuntimeVersions.
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
@@ -20,4 +33,8 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.withType(Javadoc).configureEach {
     options.addStringOption('-add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED')
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
 }
